# cilium-ipip-router

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/config/: kind-config.yaml
.github/workflow/: coverage.yaml
.github/workflows/: ci.yaml  coverage.yaml  coverage.yml  deploy.yaml  docker.yaml  integration-test.yaml  kind-test.yaml  test.yaml
.serena/: project.yml
.serena/memories/project/: structure.md
.serena/memories/suggested_commands/: testing.md
docs/: README.md  api-reference.md  architecture.md  code-generation.md  deployment.md  developer-guide.md  testing.md
manifests/: README.md  router.yaml
mem/project/: structure
resources/: log4rs.yaml
src/: lib.rs  main.rs
src/controller/: builder.rs  controller.rs  handle.rs  ipip.rs  ipip_tests.rs  mod.rs  root.rs  root_tests.rs
src/ipip/: executor.rs  mod.rs
tests/: integration_tests.rs
