[package]
name = "cilium-ipip-router"
version = "0.1.0"
edition = "2021"

[[bin]]
doc = false
name = "router"
path = "src/main.rs"

[dependencies]
actix-web = "4.9.0"
anyhow = "1.0.89"
futures = "0.3.31"
futures-core = "0.3.31"
futures-ticker = "0.0.3"
k8s-openapi = { version = "0.23.0", features = ["latest"] }
kube = { version = "0.95.0", features = ["runtime", "derive"] }
log = "0.4.22"
log4rs = "1.3.0"
prometheus-client = "0.22.3"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
